# renderdoc-mcp

./: .gitignore  ATTRIBUTION.md  LICENSE  ONBOARDING.md  README.md  pyproject.toml
docs/: build-from-source.md  roadmap.md  test-plan.md  tool-design.md  upstream-issues.md  usage.md
scripts/: fetch_binaries.py  install.ps1
src/renderdoc_mcp/: __init__.py  __main__.py  server.py  session.py  util.py
src/renderdoc_mcp/tools/: __init__.py  advanced_tools.py  capture_tools.py  data_tools.py  diagnostic_tools.py  event_tools.py  performance_tools.py  pipeline_tools.py  resource_tools.py  session_tools.py  shader_tools.py
