[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderdoc-mcp"
version = "0.2.1"
description = "MCP server for RenderDoc graphics debugger — analyze .rdc captures AND launch+capture live apps. Bundled with prebuilt renderdoc.pyd for Windows x64 / Python 3.10."
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
renderdoc-mcp = "renderdoc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/renderdoc_mcp"]
